--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
-.user-profile-block {
-	border: 1px solid red;
+.wp-block-user-profile-block-user-profile-media {
+	display: flex;
+	align-items: flex-start;
+}
+
+.wp-block-user-profile-block-user-profile-media__avatar {
+	margin-right: 1rem;
+	max-width: 100px;
+}
+
+.wp-block-user-profile-block-user-profile-media__body {
+	flex: 1;
 }
